Person and Organisation Lookup Controllers (#997)
* Expose endpoint for searching for person using ssn and last name. (#815)

* Expose endpoint for searching for person using ssn and last name.

* Use class and drop dto postfix.

* Move mapping to reponse class.

* Add success property to PersonSearchResult. Move person details into nested object.

* Rename PersonSearchComponent to LookupPersonController.

* API Endpoint for getting org from Enhetsregisteret (#847)

* adds endpoint for getting an organisation from Enhetsregisteret

* renames OrganisationSearch -> Lookup

* Update lookup controllers (#945)

* update controllers

* add 500 annotation for org lookup

* fix copy pasta

* update swagger

* lastname usage goes too deep (storage)

* update swagger

* update test paths

* use 200 OK when no hit

* typo

* log error

* format

* use the correct namespacing for the logger

* shorten method

* formatting fixes

* Fix lookup person tests.

* removes logging of user input

* adds LookupPersonController tests

* adds organisation lookup general exception test

* adds whole exception to error logmessage

---------
