# test/Altinn.App.Api.Tests/OpenApi/swagger.yaml
@@ -1584,6 +1584,90 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/SimpleInstance'
+  '/{org}/{app}/api/v1/lookup/organisation/{orgNr}':
+    get:
+      tags:
+        - LookupOrganisation
+      parameters:
+        - name: orgNr
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: org
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: app
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LookupOrganisationResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+  '/{org}/{app}/api/v1/lookup/person':
+    post:
+      tags:
+        - LookupPerson
+      parameters:
+        - name: org
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: app
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LookupPersonRequest'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LookupPersonResponse'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemDetails'
   '/{org}/{app}/api/options/{optionsId}':
     get:
       tags:
@@ -4210,6 +4294,35 @@ components:
           type: string
           nullable: true
       additionalProperties: false
+    LookupOrganisationResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        organisationDetails:
+          $ref: '#/components/schemas/OrganisationDetails'
+      additionalProperties: false
+    LookupPersonRequest:
+      required:
+        - lastName
+        - socialSecurityNumber
+      type: object
+      properties:
+        socialSecurityNumber:
+          type: string
+          nullable: true
+        lastName:
+          type: string
+          nullable: true
+      additionalProperties: false
+    LookupPersonResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        personDetails:
+          $ref: '#/components/schemas/PersonDetails'
+      additionalProperties: false
     MessageBoxConfig:
       type: object
       properties:
@@ -4285,6 +4398,19 @@ components:
           type: number
           format: double
           readOnly: true
+      additionalProperties: false
+    OrganisationDetails:
+      required:
+        - name
+        - orgNr
+      type: object
+      properties:
+        orgNr:
+          type: string
+          nullable: true
+        name:
+          type: string
+          nullable: true
       additionalProperties: false
     PartyTypesAllowed:
       type: object
@@ -4477,6 +4603,29 @@ components:
         - Cancelled
         - Skipped
       type: string
+    PersonDetails:
+      required:
+        - lastName
+        - name
+        - ssn
+      type: object
+      properties:
+        ssn:
+          type: string
+          nullable: true
+        name:
+          type: string
+          nullable: true
+        firstName:
+          type: string
+          nullable: true
+        middleName:
+          type: string
+          nullable: true
+        lastName:
+          type: string
+          nullable: true
+      additionalProperties: false
     PhoneNumber:
       type: object
       properties:
